--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-12 col-sm-12 col-lg-5">
-				<img class="profile_pic" src="pics/profile_pic.jpg" alt="">
+				<img class="profile_pic" src="pics/profile_pic.JPG" alt="">
 			</div>
 
 			<div class="col-12 col-sm-12 col-lg-7">
