:bug: fix: delete parallax scrolling effect for sm

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<script src="http://github.com/rafaelp/css_browser_selector/raw/master/css_browser_selector.js" type="text/javascript"></script>
 	
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
@@ -50,9 +52,9 @@
 					<br>
 					こんにちは！Yukiです。
 					現在フリーで英会話レッスンを毎日行っております。<br>
-					アメリカ永住権保持者です。(DV-2020、通称グリーンカード宝くじに当選)。
 				</p>
 				<p class="top_discription jp_font">
+					アメリカ永住権保持者です。(DV-2020、通称グリーンカード宝くじに当選)。
 					航空会社にて空港で英語を使った仕事の経験と、アメリカでの勤務経験があり<br class="for_sm">
 					(写真は住んでいたシアトルで撮ったものです！)<br class="for_sm">
 					それらの経験を生かした日常英会話上達の為のレッスンを得意としております。<br>
