:sparkles: feat: add twitter card

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 	<link rel="stylesheet" type="text/css" href="css/superslides.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
+	<!-- for twitter card -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:image" content="https://yuki-nagano.github.io/yukidults-english/pics/screenshot.PNG" />
+	<meta property="og:title" content="Yukidults - English Lessons" />
+	<meta property="og:description" content="Welcome to my page! Let's have fun with English!" /> 
+
 	<!-- google font -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=M+PLUS+1p&display=swap" rel="stylesheet">
