:bug: fix: edit size of contact button for overlay bug

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		<h2>
 			Start from today!
 		</h2>
-		<a href="#schedule" class="contactBtn jp_font">
+		<a href="#schedule" class="start_today contactBtn jp_font">
 			スケジュールを見る
 		</a>
 	</div>
