--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 <div id="about" class="section rosequartz_seranity_background">
 	<div class="container">
 		<div class="row">
-			<div class="col-12 col-sm-12 col-lg-5">
+			<div class="col-12 col-sm-12 col-md-5 col-lg-5">
 				<img class="profile_pic" src="pics/profile_pic.JPG" alt="">
 			</div>
 
-			<div class="col-12 col-sm-12 col-lg-7">
+			<div class="col-12 col-sm-12 com-md-7 col-lg-7">
 				<br><br>
 				<h4>Hi, this is Yuki !
 					Nice to meet you!<br></h4>
