:lipstick: style: add div for contact button

--- a/index.html
+++ b/index.html
@@ -164,9 +164,11 @@
 		<h2>
 			Start from today!
 		</h2>
-		<a href="#schedule" class="start_today contactBtn jp_font">
-			スケジュールを見る
-		</a>
+		<div>
+			<a href="#schedule" class="start_today contactBtn jp_font">
+				スケジュールを見る
+			</a>
+		</div>
 	</div>
 </div>
 
