:fire: style: adjust contact button on start from today section

--- a/index.html
+++ b/index.html
@@ -156,8 +156,8 @@
 
 <div id="overlay" class="section_overlay z-index-2"></div>
 
-<div id="contact" class="contactSection section ">
-	<div class="col-md-12 text-center z-index-3">
+<div id="contact" class="contactSection section text-center">
+	<div class="col-12 z-index-3">
 		<p class="subHeading">
 			So what you waiting for?
 		</p>
@@ -165,7 +165,7 @@
 			Start from today!
 		</h2>
 		<div>
-			<a href="#schedule" class="start_today contactBtn jp_font">
+			<a href="#schedule" class="contactBtn jp_font start_today">
 				スケジュールを見る
 			</a>
 		</div>
