:arrow_up:chore: update copyright

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 	
 	<div class="snowtown">
 		<p style="text-align: right;">
-			Copyright &#169; 2020- Yuki Nagano All Rights Reserved.
+			Copyright &#169; 2021 Yuki Nagano All Rights Reserved.
 		</p>
 	</div>
 </div>
